oop assignment 3 block 3 update

--- a/block-BJaaim/code/index.html
+++ b/block-BJaaim/code/index.html
@@ -5,7 +5,7 @@
     <!-- Responsive Design -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- CSS -->
-    <link rel="stylesheet" href="stylesheets/style.css" />
+    <!-- <link rel="stylesheet" href="stylesheets/style.css" /> -->
     <!-- Font Family -->
 
     <!-- Font Awesome Kit -->
@@ -37,5 +37,6 @@
         </form>
       </div>
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
