oop assignment 3 block 3 update

--- a/block-BJaaim/code/index.html
+++ b/block-BJaaim/code/index.html
@@ -25,7 +25,7 @@
         <form>
           <ul>
             <li>
-              <p>What's the capital of Spain?</p>
+              <!-- <p>What's the capital of Spain?</p>
               <input
                 type="radio"
                 class="option1"
@@ -47,7 +47,7 @@
                 value="option3"
               />
               <label for="option3">Seville</label>
-              <!-- <button>Next Question >>></button> -->
+              <button>Next Question >>></button> -->
             </li>
           </ul>
         </form>
